tests/rosetta/out/Smalltalk/cumulative-standard-deviation.out
/tmp/cumulative-standard-deviation.st:9: parse error, expected ']'
