tests/rosetta/out/Smalltalk/cumulative-standard-deviation.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| sqrtApprox g i newRsdv add n1 a1 q1 sd main r x |
sqrtApprox := [:x | ((x <= 0)) ifTrue: [
0.
] .
g := x.
i := 0.
[(i < 20)] whileTrue: [.
g := (((g + ((x / g)))) / 2).
i := (i + 1).
].
.
g. ].
newRsdv := [ Dictionary from:{'n'->0. 'a'->0. 'q'->0}. ].
add := [:r :x | n1 := ((r at: 'n') + 1).
a1 := ((r at: 'a') + ((((x - (r at: 'a'))) / n1))).
q1 := ((r at: 'q') + ((((x - (r at: 'a'))) * ((x - a1))))).
Dictionary from:{'n'->n1. 'a'->a1. 'q'->q1}. ].
sd := [:r | sqrtApprox value: ((r at: 'q') / (r at: 'n')). ].
main := [ r := newRsdv value.
{2. 4. 4. 4. 5. 5. 7. 9} do: [:x |.
r := add value: r value: x.
Transcript show: ((sd value: r asString)) printString; cr.
].
. ].
main value.
